[gd_scene load_steps=20 format=2]

[ext_resource path="res://space_music_bg.wav" type="AudioStream" id=1]
[ext_resource path="res://scene/TextShipScene.gd" type="Script" id=2]
[ext_resource path="res://music/MusicControl.tscn" type="PackedScene" id=3]
[ext_resource path="res://player_input/PlayerInput.tscn" type="PackedScene" id=4]
[ext_resource path="res://ships/text_ship/TextShipFactory.tscn" type="PackedScene" id=5]
[ext_resource path="res://ships/shooter/ShooterShip.tscn" type="PackedScene" id=6]
[ext_resource path="res://scene/ShipSceneStateMachine.gd" type="Script" id=7]
[ext_resource path="res://scene/ShipSceneStartState.gd" type="Script" id=8]
[ext_resource path="res://scene/ShipSceneWaveEndState.gd" type="Script" id=9]
[ext_resource path="res://scene/ShipSceneWaveStartState.gd" type="Script" id=10]
[ext_resource path="res://scene/ShipSceneWaveProcessState.gd" type="Script" id=11]
[ext_resource path="res://scene/ShipSceneEndState.gd" type="Script" id=12]
[ext_resource path="res://components/CameraShake.tscn" type="PackedScene" id=13]
[ext_resource path="res://FreezeFrame.tscn" type="PackedScene" id=14]
[ext_resource path="res://components/StateLabel.tscn" type="PackedScene" id=15]
[ext_resource path="res://scene/gui/TotalRunningScore.tscn" type="PackedScene" id=16]
[ext_resource path="res://scene/CinematicBars.tscn" type="PackedScene" id=17]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 640, 40 )

[sub_resource type="Animation" id=2]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/SceneTitle:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.5, 2.4, 3 ),
"transitions": PoolRealArray( 0.307786, 1, 0.435275, 1.86607, 1 ),
"update": 0,
"values": [ Vector2( 583, 184.552 ), Vector2( 675.745, 329.658 ), Vector2( 675.745, 329.658 ), Vector2( 724.109, 238.405 ), Vector2( 750, 150.471 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/SceneTitle:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 1.5, 3 ),
"transitions": PoolRealArray( 2.14355, 2.46229, 0.535887, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 3, 3 ), Vector2( 3, 3 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/SceneTitle:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/SceneTitle:rect_pivot_offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 72, 0 ) ]
}

[node name="TextShipScene" type="Node2D" groups=[
"scenes",
]]
script = ExtResource( 2 )

[node name="ShipSceneStateMachine" type="Node" parent="."]
script = ExtResource( 7 )

[node name="SceneStart" type="Node" parent="ShipSceneStateMachine"]
script = ExtResource( 8 )

[node name="WaveStart" type="Node" parent="ShipSceneStateMachine"]
script = ExtResource( 10 )

[node name="WaveProcess" type="Node" parent="ShipSceneStateMachine"]
script = ExtResource( 11 )

[node name="WaveEnd" type="Node" parent="ShipSceneStateMachine"]
script = ExtResource( 9 )

[node name="SceneEnd" type="Node" parent="ShipSceneStateMachine"]
script = ExtResource( 12 )

[node name="MovingElements" type="YSort" parent="."]

[node name="Camera2D" type="Camera2D" parent="MovingElements"]
position = Vector2( 640, 360 )
current = true
editor_draw_drag_margin = true

[node name="CameraShake" parent="MovingElements/Camera2D" instance=ExtResource( 13 )]

[node name="TextShips" type="Node2D" parent="MovingElements"]

[node name="ShooterShip" parent="MovingElements" instance=ExtResource( 6 )]
position = Vector2( 620, 655 )

[node name="ShooterPositions" type="Node2D" parent="MovingElements"]

[node name="Bottom" type="Position2D" parent="MovingElements/ShooterPositions"]
position = Vector2( 620, 655 )
__meta__ = {
"_editor_description_": ""
}

[node name="Top" type="Position2D" parent="MovingElements/ShooterPositions"]
position = Vector2( 620, 65 )

[node name="Left" type="Position2D" parent="MovingElements/ShooterPositions"]
position = Vector2( 65, 295 )

[node name="Right" type="Position2D" parent="MovingElements/ShooterPositions"]
position = Vector2( 1215, 295 )

[node name="TextShipFinishArea" type="Area2D" parent="MovingElements" groups=[
"textShipFinish",
]]
position = Vector2( 640, 680 )
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovingElements/TextShipFinishArea"]
shape = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PlayerInput" parent="CanvasLayer" instance=ExtResource( 4 )]
anchor_left = 1.0
anchor_top = 1.0
margin_left = -250.0
margin_top = -150.0
margin_right = -150.0
margin_bottom = -100.0

[node name="SceneTitle" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -57.0
margin_top = -175.448
margin_right = 15.0
margin_bottom = -144.448
rect_scale = Vector2( 1e-05, 1e-05 )
text = "SPACE
WAVE 01"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicControl" parent="CanvasLayer" instance=ExtResource( 3 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = -75.0
margin_right = 75.0
margin_bottom = -25.0
music = ExtResource( 1 )
playbackEnabled = true
currentlyPlaying = false

[node name="StateLabel" parent="CanvasLayer" instance=ExtResource( 15 )]
margin_left = 134.621
margin_top = 660.37
margin_right = 263.621
margin_bottom = 676.37
sourceFSM = NodePath("../../ShipSceneStateMachine")
showPrevStateTimeout = 2.0

[node name="TotalRunningScore" parent="CanvasLayer" instance=ExtResource( 16 )]
margin_left = 20.0
margin_top = 20.0

[node name="CinematicBars" parent="CanvasLayer" instance=ExtResource( 17 )]

[node name="TextShipFactory" parent="." instance=ExtResource( 5 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/show_title = SubResource( 2 )

[node name="FreezeFrame" parent="." instance=ExtResource( 14 )]

[node name="ShipMovePositionsTween" type="Tween" parent="."]
